package com.primefuel.fulltank.platform.equipment.domain.model.queries;

public record GetEquipmentByCompanyIdQuery(Long companyId) {
}
