package com.primefuel.fulltank.platform.equipment.domain.model.queries;

public record GetEquipmentByIdQuery(Long equipmentId) {
}
