package com.primefuel.fulltank.platform.equipment.domain.model.valueobjects;

public enum EquipmentType {
    TRUCK,
    BUS,
    EXCAVATOR,
    GENERATOR,
    FORKLIFT,
    OTHER
}
