package com.primefuel.fulltank.platform.equipment.interfaces.rest.resources;

public record FavoriteProviderResource(Long providerId) {
}
